--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Football Management</title>
+    <link rel="icon" type="image/png" href="images/logo.png" />
 </head>
 <body>
     <div id="root"></div>
